<resources>
    <string name="title_hall">彩票平台</string>
    <string name="tab_lottery_hall">购彩大厅</string>
    <string name="tab_lottery_record">开奖记录</string>
    <string name="tab_note_record">投注记录</string>
    <string name="tab_member_center">会员中心</string>
    <string name="notice">公告</string>
    <string name="title_name_activity_login">登录</string>
    <string name="title_name_activity_register">注册</string>
    <string name="foget_pwd">忘记密码?</string>
    <string name="remeber_pwd">记住密码</string>
    <string name="input_user_name">请输入您的用户名</string>
    <string name="input_user_pwd">请输入您的用户密码</string>
    <string name="setting_user_and_pwd">请设置您的用户名和密码</string>
    <string name="register_user_hinit">4&#8211;16个字符，可以使用字母、数字、下划线</string>
    <string name="register_pwd_hinit">6&#8211;16个字符，区分大小写</string>
    <string name="register_confirm_pwd_hinit">请再次确认密码</string>
    <string name="register_immediatly">立即注册</string>
    <string name="register_protocal_tip">轻触上面“立即注册”按钮，即表示您同意</string>
    <string name="register_protocal">《平台服务协议》</string>
    <string name="register_user_lable">用户名</string>
    <string name="register_pwd_lable">密码</string>
    <string name="register_confirm_pwd_lable">确认密码</string>
    <string name="validate_register_user">请输入帐号</string>
    <string name="validate_register_pwd">请输入密码</string>
    <string name="validate_register_confirm_pwd">请输入确认密码</string>
    <string name="validate_register_pwd_not_same">两次输入密码不相同</string>
    <string name="validate_register_regular_correct">帐号格式不正确</string>
    <string name="validate_register_user_regular_correct">帐号位数不正确</string>
    <string name="validate_register_pwd_regular_correct">密码位数不正确</string>
    <string name="register_success">注册成功</string>
    <string name="game_maintenance">正维护中&#8230;&#8230;&#8230;</string>
    <string name="url_is_null">传入地址为空！</string>
    <string name="imageUrlNil">图片地址为空</string>
    <string name="saveImgFailed">图片保存失败</string>
    <string name="saveImgSuccess">已保存到相册</string>
    <string name="is_end_page">已是最后一页</string>
    <string name="REFRESHING">正在刷新</string>
    <string name="RELEASE_TO_REFRESH">松开刷新</string>
    <string name="SWIPE_TO_REFRESH">点击刷新</string>
    <string name="REFRESH_RETURNING">正在返回</string>
    <string name="REFRESH_COMPLETE">刷新完成</string>
    <string name="LOADING_MORE">正在加载更多</string>
    <string name="RELEASE_TO_LOAD_MORE">松开加载更多</string>
    <string name="SWIPE_TO_LOAD_MORE">点击加载更多</string>
    <string name="LOAD_MORE_RETURNING">加载正在返回中</string>
    <string name="LOAD_MORE_COMPLETE">加载更多完成</string>
    <string name="NO_MORE_DATA">没有更多的数据</string>
    <string name="no_data">暂无相关数据</string>
    <string name="http_code_default">未知错误%1$d</string>
    <string name="http_code_201">新资源被创建</string>
    <string name="http_code_202">已接受处理请求但尚未完成</string>
    <string name="http_code_204">资源为空</string>
    <string name="http_code_301">资源的URI被更新</string>
    <string name="http_code_400">坏请求</string>
    <string name="http_code_401">禁止访问</string>
    <string name="http_code_404">资源不存在</string>
    <string name="http_code_406">服务端不支持所需表示</string>
    <string name="http_code_409">通用冲突</string>
    <string name="http_code_412">前置条件失败</string>
    <string name="http_code_415">接受到的表示不受支持</string>
    <string name="http_code_500">服务器错误</string>
    <string name="http_code_503">服务当前无法处理请求</string>
    <string name="http_code_608">重复下注(无须提示用户)</string>
    <string name="http_code_701">请求的token为空或已失效</string>
    <string name="loading_tip">加载中…</string>
    <string name="mine_account">账户:</string>
    <string name="mine_name">昵称:</string>
    <string name="mine_name_id">I        D:</string>
    <string name="mine_account_balance">账户余额</string>
    <string name="mine_recharge">充值</string>
    <string name="mine_withdraw">提现</string>
    <string name="mine_login_register">登录/注册</string>
    <string name="mine_user_account">账户余额</string>
    <string name="mine">我的</string>
    <string name="mine_game_record">游戏记录</string>
    <string name="mine_game_record_bootom">查看所参与的游戏记录</string>
    <string name="mine_security_center">安全中心</string>
    <string name="mine_security_center_bootom">保护您的账户安全</string>
    <string name="mine_account_details">账变明细</string>
    <string name="mine_account_details_bootom">查看账户自己变动明细</string>
    <string name="mine_recharge_record">存取记录</string>
    <string name="mine_recharge_record_bootom">查看所有充值和提现订单</string>
    <string name="mine_recommend_friends">团队管理</string>
    <string name="mine_recommend_friends_bootom">赢取现金奖励</string>
    <string name="mine_wallet_management">钱包管理</string>
    <string name="mine_wallet_management_bootom">用户的资金账户管理</string>
    <string name="mine_message_center">公告</string>
    <string name="mine_message_center_boootom">查看公告内容</string>
    <string name="mine_feedback">意见与反馈</string>
    <string name="mine_feedback_bootom">解答各种问题</string>
    <string name="mine_share_gifts">分享礼金</string>
    <string name="mine_share_gifts_bootom">查看奖励金额</string>
    <string name="mine_contact_custom_service">联系客服</string>
    <string name="mine_contact_custom_service_bootom">解答各种问题</string>
    <string name="note_tab_his">历史报表</string>
    <string name="note_tab_chaseNum">追号记录</string>
    <string name="note_tab_cancelOrder">撤单记录</string>
    <string name="note_status_all">全部</string>
    <string name="note_status_unLottery">未开奖</string>
    <string name="note_status_winning">已中奖</string>
    <string name="note_status_lost">未中奖</string>
    <string name="note_status_is_cancle">已撤单</string>
    <string name="note_status_is_cancle_back">已撤销</string>
    <string name="note_status_cancelList">撤单</string>
    <string name="note_status_cancelList1">撤销</string>
    <string name="chaseNum_status_donging">进行中</string>
    <string name="chaseNum_status_finish">已完成</string>
    <string name="main_cancel">主动撤单</string>
    <string name="sys_cancel">系统撤单</string>
    <string name="prized_stop">中奖停追</string>
    <string name="note_theDayBefore">前一天</string>
    <string name="note_theDayAfter">后一天</string>
    <string name="note_status_note">投注</string>
    <string name="note_status_pl">盈亏</string>
    <string name="note_status_last">余额</string>
    <string name="note_status_balance">金额</string>
    <string name="note_status_status">状态</string>
    <string name="note_status_time">时间</string>
    <string name="account_yinKui">盈亏:%1$s</string>
    <string name="account_cancelOrder">撤单:%1$s</string>
    <string name="total">合计:</string>
    <string name="account_balance">账户余额:</string>
    <string name="winning_amount">中奖金额:</string>
    <string name="note_total">投注总额:</string>
    <string name="yinKui">&#160;盈&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;亏:</string>
    <string name="yinKui1">盈&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;亏:</string>
    <string name="note_avail">有效投注额:</string>
    <string name="rebate">&#160;返&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;点:</string>
    <string name="rebate1">返&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;点:</string>
    <string name="unopen_prize_amount">未开奖金额:</string>
    <string name="cancel_order">&#160;撤&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;单:</string>
    <string name="cancel_order_back">&#160;撤&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;销:</string>
    <string name="note_num">投注号码:</string>
    <string name="open_prize_num">开奖号码:</string>
    <string name="note_time">投注时间:</string>
    <string name="betCount_multiple">注数/倍数:</string>
    <string name="note_idNum">注单编号:</string>
    <string name="payout">中奖金额:</string>
    <string name="bonusModel">注式/模式:</string>
    <string name="betAmount">投注金额:</string>
    <string name="idNum">编&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号:</string>
    <string name="avalPrized">可中奖项</string>
    <string name="againBet">再次下注</string>
    <string name="b_cancel_order">撤单</string>
    <string name="name_note">名称</string>
    <string name="name_prize">奖项</string>
    <string name="name_rebate">返点</string>
    <string name="name_odd">赔率</string>
    <string name="note_detail">注单详情</string>
    <string name="note_charse_num_status">状态</string>
    <string name="login_or_register">注册/登录</string>
    <string name="lottery_platform">彩票平台</string>
    <string name="lottery_low">低频彩</string>
    <string name="lottery_high">高频彩</string>
    <string name="setting_title">设置</string>
    <string name="setting_account_information">账号资料</string>
    <string name="setting_push_and_remind">推送和提醒</string>
    <string name="setting_shake_shake_election">摇一摇机选</string>
    <string name="setting_sound">声音</string>
    <string name="setting_lock_screen_gesture">锁屏手势</string>
    <string name="setting_winning_animation">中奖动画</string>
    <string name="setting_login_out">退出登录</string>
    <string name="account_title">账号资料</string>
    <string name="account_avatar">头像</string>
    <string name="account_name">昵称</string>
    <string name="account_account">账号</string>
    <string name="account_ID">ID</string>
    <string name="account_change_passwold">登录密码</string>
    <string name="account_funding_passwold">资金密码</string>
    <string name="account_lock_screen_gesture">锁屏手势</string>
    <string name="account_device_lock">设备锁</string>
    <string name="account_setting">设置</string>
    <string name="pay_title">充值</string>
    <string name="custom_contans">客服</string>
    <string name="custom_contans_wx">微信客服</string>
    <string name="custom_contans_qq">QQ客服</string>
    <string name="not_set_service">抱歉，暂未启用在线客服！</string>
    <string name="securitycenter">安全中心</string>
    <string name="securitycenter_text">您的账号信息,正在享受全面的安全防护</string>
    <string name="securitycenter_funding_password">资金密码</string>
    <string name="securitycenter_device_lock">设备锁</string>
    <string name="securitycenter_lock_screen_gesture">锁屏手势</string>
    <string name="securitycenter_update">修改</string>
    <string name="sharegifs_title">分享礼金</string>
    <string name="sharegifs_username">用戶</string>
    <string name="sharegifs_effective_betting_amount">有效投注额</string>
    <string name="sharegifs_gift">礼金</string>
    <string name="sharegifs_status">状态</string>
    <string name="determine">确定</string>
    <string name="updata_nickname">修改昵称</string>
    <string name="confirm_password">修改密码</string>
    <string name="enter_old_password">输入旧密码:</string>
    <string name="please_enter_old_password">请输入旧密码</string>
    <string name="enter_new_password">输入新密码:</string>
    <string name="please_enter_new_password">请输入新密码</string>
    <string name="confirm_new_password">确认新密码:</string>
    <string name="please_confirm_new_password">请确认新密码</string>
    <string name="input_old_psw">密码为空或与原密码不符,请重新输入</string>
    <string name="award_results">开奖结果</string>
    <string name="ten">十位</string>
    <string name="a_bit">个位</string>
    <string name="mantissa">尾数</string>
    <string name="number">号码</string>
    <string name="which_30">30期</string>
    <string name="which_50">50期</string>
    <string name="which_100">100期</string>
    <string name="cold_hot">冷热</string>
    <string name="Sundays">日</string>
    <string name="Monday">一</string>
    <string name="Tuesday">二</string>
    <string name="Wednesday">三</string>
    <string name="Thursday">四</string>
    <string name="Friday">五</string>
    <string name="Saturday">六</string>
    <string name="please_chose_question">请选择你所遇到的问题</string>
    <string name="flash_back">闪退</string>
    <string name="caton">卡顿</string>
    <string name="black_screen">黑屏</string>
    <string name="crashed">死机</string>
    <string name="interface_dislocation">界面错位</string>
    <string name="hz">和值</string>
    <string name="dx">大小</string>
    <string name="ds">单双</string>
    <string name="Jackpot_push">中奖推送</string>
    <string name="Jackpot_message">开启后,当有新的中奖订单,您会收到推送提醒。</string>
    <string name="Jackpot_include">包括</string>
    <string name="all_Species">全部彩种</string>
    <string name="high_Species">高頻彩以外的彩种</string>
</resources>