<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:orientation="vertical">

    <com.dawoo.lotterybox.view.view.HeaderView
        android:id="@+id/head_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="@string/please_chose_question"
        android:textColor="@color/color_gray_333333"
        android:textSize="@dimen/text_12_sp"
        android:paddingBottom="@dimen/dp_5"/>

    <TextView
        android:id="@+id/flash_back"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_vertical"
        android:background="@color/white"
        android:drawableRight="@mipmap/setting_image_setting"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/flash_back"
        android:textSize="@dimen/text_15_sp" />

    <TextView
        android:id="@+id/caton"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="1dp"
        android:layout_gravity="center_vertical"
        android:background="@color/white"
        android:drawableRight="@mipmap/setting_image_setting"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/caton"
        android:textSize="@dimen/text_15_sp" />
    <TextView
        android:id="@+id/black_screen"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:drawableRight="@mipmap/setting_image_setting"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/black_screen"
        android:textSize="@dimen/text_15_sp" />

    <TextView
        android:id="@+id/crashed"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:drawableRight="@mipmap/setting_image_setting"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/crashed"
        android:textSize="@dimen/text_15_sp" />

    <TextView
        android:id="@+id/interface_dislocation"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:drawableRight="@mipmap/setting_image_setting"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/interface_dislocation"
        android:textSize="@dimen/text_15_sp" />



</LinearLayout>
