<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_gray_efefef">

    <com.dawoo.lotterybox.view.view.HeaderView
        android:id="@+id/head_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:id="@+id/up_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/head_view"
        android:background="@color/white"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/setting_user_and_pwd"
            android:textColor="@color/color_gray_333333"
            android:textSize="@dimen/text_15_sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="0dp"
            android:paddingStart="10dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/register_user_lable"
                android:textColor="@color/color_gray_333333"
                android:textSize="@dimen/text_14_sp" />

            <EditText
                android:id="@+id/name_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editText_height"
                android:background="@color/transparent"
                android:lines="1"
                android:ellipsize="end"
                android:hint="@string/register_user_hinit"
                android:paddingStart="20dp"
                android:textSize="@dimen/text_12_sp"
                android:inputType="text"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_gray_EEEEEE" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingEnd="0dp"
            android:paddingStart="10dp">

            <TextView
                android:id="@+id/pwd_lable_tv"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/register_pwd_lable"
                android:textColor="@color/color_gray_333333"
                android:textSize="@dimen/text_14_sp" />


            <EditText
                android:id="@+id/pwd_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editText_height"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/pwd_lable_tv"
                android:layout_toStartOf="@+id/input_type_iv"
                android:background="@color/transparent"
                android:hint="@string/register_pwd_hinit"
                android:paddingEnd="0dp"
                android:paddingStart="20dp"
                android:textSize="@dimen/text_12_sp"
                android:inputType="textPassword"/>

            <ImageView
                android:id="@+id/input_type_iv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:src="@drawable/input_type_icon_selector" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_gray_EEEEEE" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingEnd="0dp"
            android:paddingStart="10dp">

            <TextView
                android:id="@+id/confirm_pwd_lable_tv"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/register_confirm_pwd_lable"
                android:textColor="@color/color_gray_333333"
                android:textSize="@dimen/text_14_sp" />


            <EditText
                android:id="@+id/confirm_pwd_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editText_height"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/confirm_pwd_lable_tv"
                android:layout_toStartOf="@+id/confirm_input_type_iv"
                android:background="@color/transparent"
                android:hint="@string/register_confirm_pwd_hinit"
                android:paddingEnd="0dp"
                android:paddingStart="20dp"
                android:textSize="@dimen/text_12_sp"
                android:inputType="textPassword"/>

            <ImageView
                android:id="@+id/confirm_input_type_iv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:src="@drawable/input_type_icon_selector" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        style="@style/common_btn_style"
        android:layout_below="@id/up_ll"
        android:text="@string/register_immediatly" />

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/protocal_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_14_sp"
            android:textColor="@color/color_gray_999999"
            android:layout_gravity="center_horizontal"
            android:text="@string/register_protocal_tip"/>

        <TextView
            android:id="@+id/protocal_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_protocal"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/text_14_sp"
            android:textColor="@color/color_close_theme"/>
    </LinearLayout>
</RelativeLayout>
